<resources>
    <string name="app_name">Донэнергоконтроль</string>

    <!-- Errors-->
    <string name="exception_no_internet">Проверьте интернет соединение</string>
    <string name="error">Ошибка</string>
    <string name="exception_client_error">Не правильный запрос</string>
    <string name="exception_server_error">Ошибка на сервере</string>

    <!-- Auth activity-->
    <string name="sign_in_text">ВХОД</string>
    <string name="email_hint_text">Пользователь</string>
    <string name="password_hint_text">Пароль</string>
    <string name="email_valid_error">Введите Login</string>
    <string name="password_valid_error">Введите пароль</string>

    <!--Menu-->
    <string name="tasks_title">Задачи</string>
    <string name="not_synced_tasks_title">Несихронизированные задачи</string>
    <string name="search_abonent_title">Поиск абонента</string>
    <string name="logout_title">Выход</string>

    <!--Dialog -->
    <string name="queit_dialog_allert">Вы уверены что хотите выйти?</string>
    <string name="syncronize_title">Синхронизировать</string>
    <string name="there_are_no_tasks">Нет задач</string>
    <string name="wait_text">Подождите</string>
    <string name="account_hint">Лицевой счет</string>
    <string name="comment_hint">Оставить комментарий</string>
    <string name="photo_text">Фото</string>
    <string name="value_size_hint">Значность</string>
    <string name="save_text">Сохранить</string>
    <string name="building_number">Дом №%1$s</string>
    <string name="appartments_number">Кв. №%1$s, (%2$s)</string>
    <string name="building_account_number">Дом №%1$s, (%2$s)</string>
    <string name="values_hint">Показания счетчиков :</string>
    <string name="upload_from_camera">Сделать фото</string>
    <string name="fio_hint">Ф.И.О</string>
    <string name="save_confirmed">Сохранено</string>
    <string name="zones_of_device_equals_to">\"Значность ПУ равна %1$s?\"</string>
    <string name="no">Нет</string>
    <string name="nobody_text">Другое</string>
    <string name="other_one">Не проживают</string>
    <string name="other_two">Недопуск</string>
    <string name="other_three">Безучетное потребление</string>
    <string name="other_four">Отсутствие ПУ</string>
    <string name="empty_value_error">Введите показание</string>
    <string name="options_title">Настройки</string>
    <string name="incorrect_pin">Не верный PIN</string>
    <string name="sign_out_text">Выход</string>
    <string name="relogin_text">Сменить аккаунт</string>
    <string name="options_dialog_allert">Введите PIN</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="dev_api_mod">Тестовая база</string>

</resources>
