<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/menu_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="35dp"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_below="@+id/menu_logo"
            android:background="@drawable/menu_item_bg"
            android:id="@+id/menu_tasks_button"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/tasks_title"
                android:textColor="@color/text_dark_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/menu_tasks_button"
            android:background="@drawable/menu_item_bg"
            android:id="@+id/menu_doesnt_sended_tasks_button"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/not_synced_tasks_title"
                android:textColor="@color/text_dark_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_search_button"
            android:background="@drawable/menu_item_bg"
            android:layout_below="@+id/menu_doesnt_sended_tasks_button"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/search_abonent_title"
                android:textColor="@color/text_dark_color"
                android:textSize="18sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/menu_logout_button"
            android:layout_width="match_parent"
            android:background="@drawable/menu_item_bg"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/logout_title"
                android:textColor="@color/text_dark_color"
                android:textSize="18sp" />
        </RelativeLayout>

    </RelativeLayout>