<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.rey.material.widget.ProgressView
        android:id="@+id/fill_task_progress"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:pv_autostart="false"
        app:pv_circular="true"
        app:pv_progressStyle="@style/InOutCircularProgressDrawableStyle"
        app:pv_progressMode="indeterminate"/>


    <ScrollView
        android:id="@+id/fill_task_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/fill_task_name_edit_text"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/fio_hint" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/fill_task_account_edit_text"
                    style="@style/EditTextGreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/account_hint" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/fill_task_zones_layout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/values_hint"
                        android:textSize="22dp" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/fill_task_buttons_layout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fill_task_image_preview"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/camera_icon" />

                    <Button
                        android:id="@+id/fill_task_error_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textSize="20sp"
                        android:background="@drawable/orange_button_bg"
                        android:text="@string/nobody_text" />

                    <Button
                        android:id="@+id/fill_task_save_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="15dp"
                        android:textSize="20sp"
                        android:background="@drawable/green_button_bg"
                        android:text="@string/save_text" />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/fill_task_comment_edit_text"
                style="@style/MultilineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:hint="@string/comment_hint"
                android:lines="4"
                android:padding="8dp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>